[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/h i m.png" type="Texture" id=1]
[ext_resource path="res://scripts/InsideJoja.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 86.5, 18.5 )

[node name="InsideJoja" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1616.0
margin_bottom = 944.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 504, 324 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 504, 324 )
build_mode = 1
polygon = PoolVector2Array( -144, 276, -144, 188, -144, 188, -240, 188, -240, -236, 240, -236, 240, 188, -16, 188, -16, 276 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2( 504, 324 )
polygon = PoolVector2Array( -128, 20, 240, 20, 240, -172, 240, -236, -144, -236, -144, -180, -144, 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 425.5, 589.5 )
shape = SubResource( 1 )

[node name="Fade" type="ColorRect" parent="."]
margin_right = 1632.0
margin_bottom = 928.0
color = Color( 0, 0, 0, 1 )

[node name="JojaTimerInside" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="JojaTimerInside" to="." method="_on_JojaTimerInside_timeout"]
